# meteo_server

./: .gitignore  CLAUDE.md  CODEOWNERS  Dockerfile  Makefile  README.md  crawl_site.py  crawl_site.sh  docker-compose.yml  download.py  download.sh  git_save_commit_hash.sh  go.mod  go.sum  haproxy.cfg  locustfile.py  log.ini  main.go  main.py  privacy-policy.html  privatuma-politika.html  pyproject.toml  redeploy.sh  requirements.txt  scratch.py  settings.example.py  utils.py
.github/: build-docker-image-action.yaml
.github/workflows/: build-docker-image-action.yaml  check-hap-config-action.yaml  github-actions.yaml
app/: Dockerfile  app.example.env  log.ini  main.py  pyproject.toml  run_job.sh  settings.example.py  start.sh
app/html/: atribucija.html  attribution.html  privacy-policy.html  privatuma-politika.html
app/jobs/: download.py  python_run.sh
app/utils/: crawl_site.py  dl_monit.py  download.py  download_aurora.py  download_every_4_hours.py  download_large.py  download_small.py  download_utils.py  explore_meteo_lt.py  settings.example.py  utils.py
haproxy/: Dockerfile  haproxy.cfg  pyproject.toml  renew_certs.sh  start.sh
privacy_policy/: privacy-policy.html
requirements/: common.txt  dev.txt
utils/: cron  install.sh  redeploy.sh  renew_certs.sh  start.sh  update.sh
